# ZK-ARCHE

./: .gitattributes  .gitignore  Makefile  README.md  ROADMAP.md
.github/workflows/: c.yml  ci.yml  python.yml  rust.yml
c/: HARDENING_CHANGES.md  LOCAL_VALIDATION_RUNBOOK.md  Makefile  README.md  wire-spec.md
c/fuzz/: fuzz_payloads.c  fuzz_wire.c
c/include/: iot_auth.h
c/include/auth/: auth.h  auth_crypto.h  auth_payloads.h  auth_proofs.h  auth_proto.h  auth_store.h  auth_transcript.h  auth_transport.h  auth_wire.h  crypto.h  iot_auth.h  payloads.h  proofs.h  proto.h  store.h  transcript.h  transport.h  wire.h
c/include/iot_auth/: iot_auth.h  iot_auth_crypto.h  iot_auth_payloads.h  iot_auth_proofs.h  iot_auth_proto.h  iot_auth_store.h  iot_auth_transcript.h  iot_auth_transport.h  iot_auth_wire.h
c/scripts/: ci-c.sh
c/security/: REPLAY_TEST_PLAN.md  SECURITY_GOALS.md  SECURITY_HARDENING_PLAN.md  THREAT_MODEL.md
c/src/crypto/: crypto.c  proofs.c  transcript.c
c/src/proto/: proto.c
c/src/store/: store_fs.c
c/src/transport/: transport_addr.c  transport_tcp.c  transport_udp.c
c/src/wire/: payloads.c  wire.c
c/tests/: test_e2e.c  test_security.c  test_vectors.c  test_wire.c
config/: checkpoint_competition.zk-arche.local.example.toml  model_council.zk-arche.local.example.toml
docs/: assurance-and-validation.md  commander-usage.md  cross-language-validation.md  file-inventory.txt  improvement-roadmap.md  rfc-evolution-plan.md
python/: Makefile  README.md  pyproject.toml
python/fuzz/: fuzz_payloads.py  fuzz_wire.py
python/models/proverif/: zk_arche_auth_skeleton.pv
python/scripts/: ci-python.sh
python/test-vectors/0x0001/: transcript.json
python/tests/: test_security.py  test_state_machine.py  test_vectors.py  test_wire_payloads.py
python/zk_arche/: __init__.py  caps.py  crypto.py  errors.py  payloads.py  profile.py  sodium.py  store.py  transcript.py  transport.py  wire.py
python/zk_arche/cli/: client.py  server.py
python/zk_arche/protocol/: auth.py  common.py  setup.py
rust/: Cargo.toml  HARDENING_CHANGES.md  Makefile  README.md
rust/crates/client/: Cargo.toml
rust/crates/client/src/: main.rs
rust/crates/proto/: Cargo.toml
rust/crates/proto/examples/: gen_test_vectors.rs
rust/crates/proto/src/: caps.rs  crypto.rs  error.rs  lib.rs  profile.rs  transcript.rs  wire.rs
rust/crates/proto/src/proto/: auth.rs  common.rs  mod.rs  payloads.rs  setup.rs
rust/crates/proto/src/store/: fs.rs  mod.rs
rust/crates/proto/src/transport/: mod.rs  tcp.rs  udp.rs
rust/crates/proto/tests/: security_release.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: main.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: auth_payloads.rs  wire_parse.rs
rust/scripts/: ci-rust.sh
rust/security/: ASSURANCE_STATUS.md  EXTERNAL_REVIEW_BRIEF.md  SIDE_CHANNEL_RNG_CHECKLIST.md
rust/spec/: build_spec.js  iot-auth-wire-spec.docx
rust/test-vectors/0x0001/: DRBG.md  kdf_kc.json  pid.json  rerandomization.json  role_set_membership.json  schnorr_auth_client.json
scripts/: ci-all.sh  ci-c.sh  ci-python.sh  ci-release-qualification.ps1  ci-release-qualification.sh  ci-rust.sh  compare-test-vectors.py  run-c-ci-msys2.ps1  setup-msys2-c-env.ps1
shared-context/: README.md
spec/: README.md  implementation-requirements.md  iot-profiles.md  privacy-considerations.md  registries.md  security-considerations.md  test-vectors.md  zk-arche-protocol.md
