[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zk-arche"
version = "0.1.0"
description = "Python reference implementation of the ZK-ARCHE v2 IoT authentication protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "ZK-ARCHE" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
zk-arche-client = "zk_arche.cli.client:main"
zk-arche-server = "zk_arche.cli.server:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
