[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zk-arche"
version = "0.1.0"
description = "Python reference implementation of the ZK-ARCHE v2 IoT authentication protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "ZK-ARCHE" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
  "bandit[toml]>=1.7",
  "pip-audit>=2.7",
]

[project.scripts]
zk-arche-client = "zk_arche.cli.client:main"
zk-arche-server = "zk_arche.cli.server:main"

# Restrict package discovery to the library so sibling dirs (tests, evidence,
# test-vectors, build artifacts) are never mistaken for top-level packages.
[tool.setuptools.packages.find]
include = ["zk_arche*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
